welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: unclosed character literal
      return '10:00'
             ^alarmClock:4: error: Non-zero integral values may not have a leading zero.
      return '10:00'
                 ^alarmClock:4: error: unclosed character literal
      return '10:00'
                   ^alarmClock:6: error: unclosed character literal
    else return 'off'
                    ^alarmClock:11: error: unclosed character literal
      return '7:00'
             ^alarmClock:11: error: Non-zero integral values may not have a leading zero.
      return '7:00'
                ^alarmClock:11: error: unclosed character literal
      return '7:00'
                  ^alarmClock:13: error: Non-zero integral values may not have a leading zero.
    else return 10:00
                   ^alarmClock:4: error: ';' expected but something found.
      return '10:00'
             ^alarmClock:6: error: ';' expected but 'return' found.
    else return 'off'
         ^alarmClock:11: error: ';' expected but something found.
      return '7:00'
             ^alarmClock:13: error: ';' expected but 'return' found.
    else return 10:00
         ^